<resources>
    <string name="app_name">Quiz your brain</string>

    <!-- Strings related to login -->
    <string name="email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="title_activity_quiz_main">Quiz Money</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_question">Which Quiz App rewards knowledge with real prizes?</string>
    <string name="category">History &amp; Art</string>
    <string name="question_number">Question 5/7</string>

    <!-- main activity -->

    <string name="stratBtn">Start quiz</string>
    <string name="maxScore">High Score</string>
    <string name="fonts">casual</string>
    <string name="rateTitle">Rate Us</string>
    <string name="rateit">Rate us</string>
    <string name="rateno">no thanks</string>
    <string name="ratelater">Later</string>
    <string name="rateText">If you have been enjoying our app, we\'d really appreciate it if you could leave a nice review on the market </string>
    <!--share -->
    <string name="shareBody">I have fun playing Quiz game and getting good scores 😎💪 my score is </string>
    <!--Ads-->
    <string name="coinVideo">Watch video</string>
    <string name="coins">0</string>
    <string name="score">Your score is </string>
    <string name="comAns">Enter the right answer</string>
    <string name="leaveApp">Do you really want to leave this question!!</string>
    <string name="useCoins">Do you want use 5 coins?</string>
    <string name="Yes">Yes</string>
    <string name="gameOver">Game Over</string>
    <string name="play">Play</string>
    <string name="OK">OK</string>
    <string name="phone">Enter your phone number </string>
    <string name="mailSubjectRewarded">Rewarded User</string>
    <string name="mailMessageRewarded">Hello, this number has been answer to all the questions the number is :</string>
    <string name="congrt">Congratulation you win</string>
    <string name="winningInfo">We send email to reserve your reward \n play again!</string>
    <string name="submitComplete">submit</string>
    <string name="submitCompleteCheck">Please check your answers</string>

    <!--Add question activity -->
    <string name="questionTitle">Add question title</string>
    <string name="questionCategory">Add question category</string>
    <string name="activeMood">Is question active</string>
    <string name="saveBtn">Save</string>
    <string name="todo">TODO</string>
    <string name="noconnection">No connection</string>
    <string name="checkconnection">check your internet connection</string>
    <string name="ok">Ok</string>
    <array name="question_type">
        <item>MCQ</item>
        <item>Complete</item>
    </array>
    <string name="reqired">Email and password are required</string>

    <!--tool tips-->
    <string name="adsTip">Watch Ad to earn more coins</string>
    <string name="coinsTip">User your coins to skip this question</string>
    <string name="facebook_app_id">441835156237486</string>
    <string name="fb_login_protocol_scheme">fb441835156237486</string>
    <string name="have_account">This Email have existing account</string>
    <string name="link_fb">Do you want to link Facebook to the existing account ?</string>
    <string name="google_login">Login with Google</string>
    <string name="register">Register with Email</string>
    <string name="reset">Forgot password?</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="confirm_password">Confirm password</string>
    <string name="not_match">Password does not match the confirm password</string>
    <string name="Emailnottrue">Cannot send the message. Verify the e-mail address</string>
    <string name="youraccountiscreated">open your e-mail to verify your accunt thin login normally</string>
    <string name="not_verified">E-mail is not verified. go to e-mail and click the link to verify it</string>
    <string name="resetpass">reset password</string>
    <string name="passwordsent">The password is sent to this E-mail.</string>
    <string name="usernameorpassword">username or password is incorrect</string>
    <string name="more_info">More Information</string>
    <string name="thanks">Thanks for downloading our App</string>
    <string name="report">This is a beta version of tha APP you can report our developer for any issues or suggestions</string>
    <string name="developer">This is a beta version of tha APP you can report our developer for any issues or suggestions</string>
    <string name="abanob">Abanob Mossad</string>
    <string name="mostafa">Mustafa Sherif</string>
    <string name="mostafa_mail">mostafashiref96@yahoo.com</string>
    <string name="abanob_mail">mossadabanob@gmail.com</string>


</resources>
