<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:background="@drawable/main_background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:textColor="@color/textBgColor"
        android:layout_height="wrap_content"
        android:text="@string/rateTitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/main_icon" />

    <TextView
        android:id="@+id/mainTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:text="@string/rateText"
        android:textColor="@color/textBgColor"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/rateButtons"
        android:layout_below="@id/mainTitel"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/rateIt"
            android:layout_width="wrap_content"
            android:background="@drawable/button_shape_right"
            android:textColor="@color/textBgColor"
            android:layout_marginEnd="2dp"
            android:paddingEnd="3dp"
            android:paddingStart="3dp"
            android:layout_height="wrap_content"
            android:text="@string/rateit" />
        <Button
            android:id="@+id/rateLater"
            android:layout_width="wrap_content"
            android:background="@drawable/yellow_butn"
            android:textColor="@color/textBgColor"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_marginEnd="2dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/ratelater" />
        <Button
            android:id="@+id/rateNo"
            android:layout_width="wrap_content"
            android:background="@drawable/button_shape_wrong"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_marginEnd="3dp"
            android:textColor="@color/textBgColor"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/rateno" />
    </LinearLayout>
</RelativeLayout>