<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Register">

    <AutoCompleteTextView
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="8dp"
        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:textColor="@color/yellow"

        />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:textColor="@color/yellow"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/yellow_btn_style"
        android:layout_gravity="center"
        android:onClick="registerClicked"
        android:text="@string/register"
        android:textColor="@color/whiteBG"
        />

</LinearLayout>