<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.abano.quizyourbrain.QuestionControl.AddQuestion">

    <ImageView
        android:id="@+id/questionImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/question_paceholder" />

    <EditText
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/questionTitle"
        android:padding="15dp" />

    <EditText
        android:id="@+id/question_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/questionCategory"
        android:padding="15dp" />

    <Spinner
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:id="@+id/question_type"
        android:layout_width="match_parent"
        android:entries="@array/question_type"
        android:layout_height="wrap_content">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/isActive"
            android:paddingEnd="50dp"
            android:text="@string/activeMood"
            android:textSize="18sp" />

        <Switch

            android:id="@+id/isActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="0dp" />

    </LinearLayout>
    <Button
        android:id="@+id/saveQuestion"
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:textColor="@color/textBgColor"
        android:text="@string/saveBtn"/>
</LinearLayout>
